--- a/routing-demo/src/app/app.component.html
+++ b/routing-demo/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
 </div>
 <nav>
-  <a routerLink="/departments" routerLinkActive="active">Departments</a>
+  <a routerLink="/department-list" routerLinkActive="active">Departments</a>
   <a routerLink="/employees"   routerLinkActive="active">Employees</a>
 </nav>
 
