--- a/angular-forms/tdf/src/app/app.component.html
+++ b/angular-forms/tdf/src/app/app.component.html
@@ -6,9 +6,10 @@
     {{ userModel | json}}
         <div class="form-group">
             <label>Name</label>
-            <input type="text" class="form-control" name="userName" [(ngModel)]="userModel.name">
+            <input type="text" required #name="ngModel" class="form-control" [class.is-invalid]="name.invalid && name.touched" 
+            name="userName" [(ngModel)]="userModel.name">
         </div>
-
+    
         <div class="form-group">
             <label>Email</label>
             <input type="Email" class="form-control" name="email" [(ngModel)]="userModel.email">
@@ -16,7 +17,8 @@
 
         <div class="form-group">
             <label>Phone</label>
-            <input type="tel" class="form-control" name="phone" [(ngModel)]="userModel.phone"> 
+            <input type="tel" #phone="ngModel" pattern="^\d{10}$" 
+            class="form-control" [class.is-invalid]="phone.invalid && phone.touched" name="phone" [(ngModel)]="userModel.phone"> 
         </div>
 
         <div class="form-group">
